# fedetec_backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  openapi.json  pyproject.toml
alembic/: env.py
alembic/versions/: 202605270001_crear_tablas_iniciales.py  202605280002_empresas_cliente_usuarios.py  202605290003_calificaciones_servicio.py  202605290004_evidencias_storage_key.py  202606150001_tipos_servicio_valores.py  202606150002_propinas_servicio.py  202607010001_trazabilidad_fcm.py
app/: main.py
app/api/: deps.py
app/core/: config.py  correo.py  database.py  firebase.py  security.py  storage.py
app/modelos/: __init__.py  calificacion_servicio.py  configuracion_app.py  empresa_cliente.py  evidencia_servicio.py  notificacion_servicio.py  propina_servicio.py  rechazo_servicio.py  reporte_pago.py  reprogramacion_servicio.py  rol.py  sede.py  servicio.py  tecnico.py  tipo_servicio.py  usuario.py  usuario_rol.py
app/repositorios/: calificacion_servicio.py  configuracion_app.py  empresa_cliente.py  evidencia_servicio.py  notificacion_servicio.py  propina_servicio.py  rechazo_servicio.py  reporte_pago.py  reprogramacion_servicio.py  sede.py  servicio.py  tecnico.py  tipo_servicio.py  usuario.py
app/schemas/: __init__.py  admin.py  autenticacion.py  calificacion_servicio.py  (+10 more)
tests/: test_admin.py  test_calificaciones_servicio.py  test_correo.py  test_demo_app.py  test_empresas_cliente.py  test_evidencias.py  test_main.py  test_propinas_servicio.py  test_reportes_pago.py  test_servicios.py  test_tecnicos.py
(+24 files in other folders)
